--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "database.js",
   "scripts": {
-    "dev": "npx nodemon app.js"
+    "dev": "npx nodemon app.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "mysql2": "^3.1.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.4.9",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
