--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "mysql2": "^3.1.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.9",
     "nodemon": "^2.0.20",
