--- a/client/package.json
+++ b/client/package.json
@@ -9,18 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.7",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.3"
+    "@gorhom/bottom-sheet": "^4.4.5",
+    "expo": "~47.0.12",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@tsconfig/react-native": "^3.0.2",
-    "@types/jest": "^29.5.3",
-    "@types/react": "^18.2.20",
-    "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^5.1.6"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
